Attempt to fix orientation landscape stretch by changing font-size from vw to px

--- a/css/main.css
+++ b/css/main.css
@@ -431,7 +431,8 @@ footer {
 @media only screen and (pointer: fine) and (min-width: 1024px) {
     
     html {
-        font-size: 1.26vw;
+        /*font-size: 1.26vw;*/
+        font-size: 21px;
     }
     
     h1 {
